[tool.poetry]
name = "queue-tool"
version = "0.1.0"
description = ""
authors = ["Potato Mexicano <potatomexicano006@yahoo.com>"]
readme = "README.md"
packages = [{include = "queue_tool"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = {extras = ["async"], version = "^2.3.2"}
jsonschema = "^4.17.3"
sqlalchemy = "^2.0.16"
psycopg2 = "^2.9.6"
isort = "^5.12.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
